test_regress/t/t_enum_huge_methods_bad.out
%Error: t/t_enum_huge_methods_bad.v:15:18: Value too wide for 64-bits expected in this context 160'h12344567abcd12344567abcd
   15 |         ELARGE = 160'h1234_4567_abcd_1234_4567_abcd
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_enum_huge_methods_bad.v:30:21: Unsupported: enum next/prev/name method on enum with > 64 bits
                                                     : ... In instance t
   30 |          $display(e.name);
      |                     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
